@@ -7,6 +7,8 @@ New features:
 
 * Add tooltips to Song View pattern buttons
 
+* Implement view for the recorded audio
+
 Bug fixes:
 
 Other:
